# aisio

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst
.github/workflows/: pages.yml
auxiliary/: cpu_freq_logger.sh  generate_dataset.sh  iommu_grub_update.py
cijoe/: cijoe-config.toml  nvidia_prep.yaml  nvidia_setup.yaml
cijoe/stuff/: nvidia_setup_apt.yaml  nvidia_setup_dnf.yaml
configs/: aisio.toml  amdstack.toml  bench-amd.toml  bench_fio_compare.toml  datasets.toml  devices_16.toml  nvstack.toml  smrc.toml  transport.toml  udmabuf_import.toml  uio_dmabuf.toml
docs/: README.md
docs/src/: _toc.yml  abstract.md  architecture.md  background.md  conclusion.md  conf.py  environment.md  environments.md  evaluation.md  experiment.md  experimental_framework.md  experiments.md  future_work.md  implementation.md  index.md  introduction.md  latex_theme.py  poc.md  references.bib  references.md  related.md  results.md
docs/src/experiments/: cpu_initiated.md  device_initiated_iosize.md  device_initiated_qdepth.md  index.md  pcie_saturation.md  tool_comparison.md
docs/tooling/: aisio_docs.py  plots.py  pyproject.toml
homi/: .gitignore  Makefile  README.md  daemon.c  homi.service  homi.service.in  meson.build
homi/config/: homi.conf.in
homi/docs/: ipc.md
homi/include/: homi_device.h  homi_log.h  homi_opts.h  homi_proto.h  homic.h  homid.h  homid_ipc.h  homid_log.h  homid_opts.h  homid_xal.h
homi/src/: daemon.c  homi.c  homi_device.c  homi_log.c  homi_opts.c  homi_proto.c  homic.c  homid.c  homid_ipc.c  homid_opts.c  homid_xal.c
homi/subprojects/: tomlc17.wrap
homi/subprojects/packagefiles/tomlc17-patch/: meson.build
scripts/: bdevperf.py  bdevperf_combine.py  bdevperf_helper.py  bdevperf_populate.py  bdevperf_runall.py  bdevperf_visualise.py  bdevperf_visualize.py  bench_combine.py  bench_helper.py  bench_runall.py  bench_visualize.py  cpu_freq_helper.py  cuda_p2p_sample.py  dcgm_helper.py  docs_plots_barplot_sat.py  docs_plots_barplot_tool.py  docs_plots_lineplot.py  docs_plots_lineplot_cuda_iosize.py  docs_plots_lineplot_cuda_qdepth.py  filperf.py  fio_compare_collect.py  fio_xnvme.py  fio_xnvme_prefill.py  fio_xnvme_trim.py  gdsio.py  generate_dataset.py  iommu_boot.py  iommu_common.py  iommu_overhead.py  iommu_overhead_combine.py  sil.py  spdk_nvme_perf.py  xnvmeperf.py
tasks/: bench_aisio.yaml  bench_bdevperf_cpu.yaml  bench_cuda_iosize.yaml  bench_cuda_qdepth.yaml  bench_fio_compare.yaml  bench_gds.yaml  bench_io.yaml  bench_iommu_overhead.yaml  bench_pcie.yaml  bench_posix.yaml  bench_sil_synthetic.yaml  bench_tools.yaml  benchmark_files.yaml  benchmark_synthetic.yaml  compare_gds_xfermodes.yaml  inspect_nvstack.yaml  populate_devices.yaml  setup_aisio.yaml  setup_amdstack.yaml  setup_benchmark.yaml  setup_benchmark_bdevperf.yaml  setup_dataset.yaml  setup_nvstack.yaml  setup_nvstack_from_source.yaml  setup_ubuntu.yaml  setup_udmabuf_import.yaml  setup_uio_dmabuf.yaml
templates/: barplot-sat.yaml.jinja2  barplot-tool.yaml.jinja2  bench-dom.jinja2.html  bench-style.jinja2.css  bench-update-chart.jinja2.js  benchmark-fio-compare.jinja2  benchmark-io.jinja2  benchmark-pcie.jinja2  benchmark-tools.jinja2  benchmark-visualization.html.jinja2  iommu-overhead.jinja2  lineplot-cuda-iosize.yaml.jinja2  lineplot-cuda-qdepth.yaml.jinja2  lineplot.yaml.jinja2
tests/: test_fio_compare_artifacts.py  test_fio_compare_validation.py
udmabuf-import/: Makefile  README.rst  udmabuf_import_cpu.c  udmabuf_import_gpu.c
udmabuf-import/patches/: udmabuf-import-dma-buf-and-share-phys-addr-to-user.patch
uio-dmabuf/: Makefile  README.rst  uio_dmabuf_cpu.c  uio_dmabuf_gpu.c
uio-dmabuf/patches/: uio-import-dma-buf-and-share-phys-addr-to-user.patch
