[project]
name = "aisio-docs"
version = "0.1.0"
description = "Documentation build environment for the AISIO project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "jupyter-book",
    "linkify-it-py",
    "myst-parser>=1.0",
    "sphinx>=7.0",
    "sphinx-autobuild>=2024.0",
    "sphinx-book-theme",
    "sphinxcontrib-bibtex",
    "sphinx-external-toc",
    "sphinx_thebe",
]

[project.scripts]
aisio-docs-build-html = "aisio_docs:build_html"
aisio-docs-build-pdf = "aisio_docs:build_pdf"
aisio-docs-clean = "aisio_docs:clean"
aisio-docs-serve = "aisio_docs:serve"
